# diffusion-tinker

./: .gitignore  README.md  TRAINING_GUIDE.md  pyproject.toml
examples/: ddrl_aesthetic.py  dpo_pickapic.py  draft_aesthetic.py  flowgrpo_multi_reward.py  grpo_aesthetic.py  grpo_ocr.py  sft_naruto.py
notebooks/: ddrl_demo.ipynb
scripts/: cluster_aesthetic.py  cluster_ddrl_data.py  cluster_ocr.py  diagnose_ocr.py  ocr_reproduce.py  ocr_reproduce.sh  runpod_setup.sh  runpod_validate.py  runpod_validate.sh  slurm_diagnose.sh
src/diffusion_tinker/: __init__.py
src/diffusion_tinker/core/: latent_utils.py  noise_strategy.py  preference_dataset.py  stat_tracking.py  trajectory.py
src/diffusion_tinker/models/: flux_patch.py  sd3_patch.py
src/diffusion_tinker/rewards/: __init__.py  base.py  compose.py  protocol.py  resolve.py
src/diffusion_tinker/rewards/builtin/: __init__.py  aesthetic.py  clip_score.py  hps_v2.py  ocr.py
src/diffusion_tinker/trainers/: __init__.py  base_config.py  base_trainer.py  ddpo_config.py  ddpo_trainer.py  ddrl_config.py  ddrl_trainer.py  diffusion_dpo_config.py  diffusion_dpo_trainer.py  draft_config.py  draft_trainer.py  flowgrpo_config.py  flowgrpo_trainer.py  sft_config.py  sft_trainer.py
tests/: test_full_pipeline.py
